# stocklake

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  Taskfile.yml  _typos.toml  conftest.py  dev-requirements.txt  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy_docs.yml  publish.yml  release.yml
cli/: index.html
database/: index.html
docs/: cli.md  database.md
docs/examples/: postgresql_and_metabase.md  stdout_and_jq.md
examples/postgresql_and_metabase/: index.html
examples/stdout_and_jq/: index.html
stocklake/: __about__.py  __init__.py  environment_variables.py  exceptions.py
stocklake/cli/: __init__.py
stocklake/core/: base_data_loader.py  base_sqlalchemy_store.py  base_store.py  constants.py  stdout.py
stocklake/data_loaders/: base.py  common.py
stocklake/data_loaders/nasdaq/: data_loader.py
stocklake/entities/: file_info.py
stocklake/nasdaqapi/: README.md  cli.py  constants.py  data_loader.py  entities.py  pipeline.py  preprocessor.py  sqlalchemy_store.py  stores.py  utils.py
stocklake/pipelines/: base.py  common.py
stocklake/pipelines/nasdaq/: constants.py  pipeline.py
stocklake/polygonapi/: __init__.py  cli.py  constants.py  data_loader.py  entities.py  pipeline.py  preprocessor.py  stores.py  utils.py  validation.py
stocklake/polygonapi/aggregates_bars/: cli.py  data_loader.py  entities.py  pipeline.py  preprocessor.py  stores.py
stocklake/polygonapi/stock_financials_vx/: cli.py  data_loader.py  entities.py  pipeline.py  preprocessor.py  stores.py
stocklake/preprocessors/: base.py  common.py
stocklake/preprocessors/nasdaq/: preprocessor.py
stocklake/stores/: alembic.ini  constants.py
stocklake/stores/artifact/: base.py  local_artifact_repo.py
stocklake/stores/db/: cli.py  database.py  models.py  schemas.py  utils.py
stocklake/stores/db_migrations/: env.py
stocklake/tests/nasdaqapi/: sample_response.json
stocklake/utils/: file_utils.py  validation.py
stocklake/wiki_sp500/: cli.py  data_loader.py  entities.py  pipeline.py  preprocessor.py  stores.py
tests/mocks/: mock_api_server.py
tests/nasdaqapi/: sample_response.json  test_cli.py  test_data_loader.py  test_pipeline.py  test_preprocessor.py  test_sqlalchemy_store.py  test_store.py  test_stores.py
tests/polygonapi/: test_cli.py  test_data_loader.py  test_pipeline.py  test_preprocessor.py  test_stores.py
tests/polygonapi/aggregates_bars/: test_cli.py  test_data_loader.py  test_pipeline.py  (+2 more)
tests/utils/: test_file_utils.py  test_validation.py
tests/wiki_sp500/: test_cli.py  test_data_loader.py  test_pipeline.py  test_preprocessor.py  test_stores.py
(+28 files in other folders)
