[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stocklake"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
dependencies = [
  "click",
  "pandas",
  "polygon-api-client",
  "python-dotenv",
  "requests",
]

[project.optional-dependencies]
dev = ["black", "ruff-lsp"]

[project.scripts]
stocklake = "stocklake.cli:cli"

[tool.hatch.version]
path = "stocklake/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/stocklake"]
